--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,126 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+  font-family: 'Arial', sans-serif;
   margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column; /* Cambiado para permitir el centrado del contenido */
+  justify-content: center; /* Centrado vertical */
+  align-items: center; /* Centrado horizontal */
+  height: 100vh; /* Altura completa de la ventana */
+  width: 100vw; /* Ancho completo de la ventana */
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+Nav {
+  background: #ffffff; /* Fondo negro para el navbar */
+  padding: 10px 0; /* Padding vertical */
+  position: fixed; /* Fijo en la parte superior */
+  top: 0; /* Alínea a la parte superior */
+  width: 100%; /* Ancho completo */
+  text-align: left; /* Centrado del texto en el navbar */
+  z-index: 1000; /* Asegura que esté por encima del contenido */
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+
+
+.title {
+  color: #333; /* Color del texto */
+  font-size: 48px; /* Tamaño de fuente */
+  text-align: center;
+   margin-top: 500px;/* Alinear texto al centro */
+}
+
+
+h1{
+  
+  padding: 0;
+  display: flex;
+  flex-direction: column; /* Cambiado para permitir el centrado del contenido */
+  justify-content: center; /* Centrado vertical */
+  color: #ffffff;
+
+}
+
+Nav li {
+  padding: 0;
+  display: flex;
+  justify-content: right;
+  margin: 20px;
+  display: inline;
+}
+
+Nav {
+  margin: 0 15px;
+}
+
+Nav a {
+  color: #00ffcc; /* Color de texto */
+  text-decoration: none; /* Sin subrayado */
+  font-weight: bold;
+  font-size: 18px;
+  transition: color 0.3s;
+}
+
+ul{
+  display: block;
+
+}
+
+
+Nav a:hover {
+  color: #ff00cc; /* Color al pasar el mouse */
+}
+
+form{
+  background: rgba(255, 255, 255, 0.553); /* Fondo blanco semi-transparente */
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  text-align: center; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 80px;
+  width: 300px;
+}
+
+form h2 {
+  color: #ffffff; /* Color del título */
+  margin: 0px;
+  margin-bottom: 10px;
+}
+
+form input {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #000000; /* Borde color */
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
+  color: #000000; /* Color del texto de entrada */
+}
+
+form button {
+  width: 100px;
+  padding: 10px;
+  border: none;
+  border-radius: 50px;
+  background: #354838; /* Fondo botón */
+  color: #fff; /* Color del texto del botón */
+  cursor: pointer;
+  font-weight: bold;
+  transition: background 0.5s;
+  margin: 10px 0;
+}
+
+form button:hover {
+  color: #000;
+  background: #ffffff9a;
+}
+
+.message {
+  color: #ff0033; 
+  margin-top: 10px;
 }
